tests/compile_fail/local_outlive_handle_scope.stderr
error[E0716]: temporary value dropped while borrowed
 --> tests/compile_fail/local_outlive_handle_scope.rs:6:5
  |
5 |   let _local = {
  |       ------ borrow later stored here
6 |     v8::make_handle_scope!(let scope, scope1);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
...
9 |   };
  |   - temporary value is freed at the end of this statement
  |
  = note: consider using a `let` binding to create a longer lived value
  = note: this error originates in the macro `std::pin::pin` which comes from the expansion of the macro `v8::make_handle_scope` (in Nightly builds, run with -Z macro-backtrace for more info)
